--- a/index-tabela.html
+++ b/index-tabela.html
@@ -35,7 +35,6 @@
 <h1>Ocorrências Ativas em Portugal</h1>
 
 <div id="filtros">
-  <select id="distritoFiltro"><option value="">Distrito</option></select>
   <select id="concelhoFiltro"><option value="">Concelho</option></select>
   <select id="freguesiaFiltro"><option value="">Freguesia</option></select>
   <select id="estadoFiltro"><option value="">Estado</option></select>
@@ -51,7 +50,6 @@
     <thead>
       <tr>
         <th>Data/Hora</th>
-        <th>Distrito</th>
         <th>Concelho</th>
         <th>Freguesia</th>
         <th>Localização</th>
@@ -69,7 +67,6 @@
 
 <script>
 const tabela = document.querySelector('#ocorrencias tbody');
-const distritoFiltro = document.getElementById('distritoFiltro');
 const concelhoFiltro = document.getElementById('concelhoFiltro');
 const freguesiaFiltro = document.getElementById('freguesiaFiltro');
 const estadoFiltro = document.getElementById('estadoFiltro');
@@ -102,7 +99,6 @@ fetch(proxy)
       const p = f.properties;
       return {
         DataHora: p.DataInicioOcorrencia,
-        Distrito: p.Distrito || '—',
         Concelho: p.Concelho || '—',
         Freguesia: p.Freguesia || '—',
         Localizacao: p.Localidade || '—',
@@ -123,33 +119,19 @@ function preencherFiltros() {
   function criarOpcoes(array, select) {
     const valores = [...new Set(array.filter(Boolean))].sort();
     select.innerHTML = `<option value="">${select.id.replace('Filtro','')}</option>`;
-    valores.forEach(v => {
-      const opt = document.createElement('option');
-      opt.value = v; opt.textContent = v; select.appendChild(opt);
-    });
+    valores.forEach(v => { const opt = document.createElement('option'); opt.value=v; opt.textContent=v; select.appendChild(opt); });
   }
-  criarOpcoes(todasOcorrencias.map(o => o.Distrito), distritoFiltro);
+
+  criarOpcoes(todasOcorrencias.map(o => o.Concelho), concelhoFiltro);
   criarOpcoes(todasOcorrencias.map(o => o.Estado), estadoFiltro);
   criarOpcoes(todasOcorrencias.map(o => o.Natureza), naturezaFiltro);
-  atualizarConcelhos();
-}
-
-function atualizarConcelhos() {
-  const dist = distritoFiltro.value;
-  let concelhos = todasOcorrencias
-    .filter(o => !dist || o.Distrito === dist)
-    .map(o => o.Concelho);
-  concelhos = [...new Set(concelhos)].sort();
-  concelhoFiltro.innerHTML = `<option value="">Concelho</option>`;
-  concelhos.forEach(c => { const opt = document.createElement('option'); opt.value=c; opt.textContent=c; concelhoFiltro.appendChild(opt); });
   atualizarFreguesias();
 }
 
 function atualizarFreguesias() {
-  const dist = distritoFiltro.value;
   const conc = concelhoFiltro.value;
   let freguesias = todasOcorrencias
-    .filter(o => (!dist || o.Distrito === dist) && (!conc || o.Concelho === conc))
+    .filter(o => !conc || o.Concelho === conc)
     .map(o => o.Freguesia);
   freguesias = [...new Set(freguesias)].sort();
   freguesiaFiltro.innerHTML = `<option value="">Freguesia</option>`;
@@ -157,7 +139,6 @@ function atualizarFreguesias() {
 }
 
 function atualizarTabela() {
-  const distrito = distritoFiltro.value;
   const concelho = concelhoFiltro.value;
   const freguesia = freguesiaFiltro.value;
   const estado = estadoFiltro.value;
@@ -165,9 +146,8 @@ function atualizarTabela() {
   const pesquisa = pesquisaInput.value.toLowerCase();
 
   const filtradas = todasOcorrencias.filter(o => {
-    const texto = `${o.Distrito} ${o.Concelho} ${o.Freguesia} ${o.Localizacao} ${o.Estado} ${o.Natureza}`.toLowerCase();
-    return (!distrito || o.Distrito === distrito) &&
-           (!concelho || o.Concelho === concelho) &&
+    const texto = `${o.Concelho} ${o.Freguesia} ${o.Localizacao} ${o.Estado} ${o.Natureza}`.toLowerCase();
+    return (!concelho || o.Concelho === concelho) &&
            (!freguesia || o.Freguesia === freguesia) &&
            (!estado || o.Estado === estado) &&
            (!natureza || o.Natureza === natureza) &&
@@ -201,7 +181,6 @@ function atualizarTabela() {
 
     tr.innerHTML = `
       <td>${formatarData(o.DataHora)}</td>
-      <td>${o.Distrito}</td>
       <td>${o.Concelho}</td>
       <td>${o.Freguesia}</td>
       <td>${o.Localizacao}</td>
@@ -216,8 +195,6 @@ function atualizarTabela() {
   });
 }
 
-// Eventos para filtros dependentes
-distritoFiltro.addEventListener('change', () => { atualizarConcelhos(); atualizarTabela(); });
 concelhoFiltro.addEventListener('change', () => { atualizarFreguesias(); atualizarTabela(); });
 freguesiaFiltro.addEventListener('change', atualizarTabela);
 estadoFiltro.addEventListener('change', atualizarTabela);
@@ -225,7 +202,6 @@ naturezaFiltro.addEventListener('change', atualizarTabela);
 pesquisaInput.addEventListener('input', atualizarTabela);
 
 document.getElementById('limparFiltros').addEventListener('click', () => {
-  distritoFiltro.value = '';
   concelhoFiltro.value = '';
   freguesiaFiltro.value = '';
   estadoFiltro.value = '';
@@ -235,5 +211,6 @@ document.getElementById('limparFiltros').addEventListener('click', () => {
   atualizarTabela();
 });
 </script>
+
 </body>
 </html>
