--- a/index-tabela.html
+++ b/index-tabela.html
@@ -30,7 +30,7 @@
 
   /* Cards de estatísticas */
   #estatisticas { display: flex; flex-wrap: wrap; gap: 15px; margin-bottom: 20px; }
-  .card { flex: 1 1 150px; padding: 15px; border-radius: 8px; color: #fff; font-weight: bold; text-align: center; box-shadow: 0 2px 6px rgba(0,0,0,0.2); }
+  .card { flex: 1 1 150px; padding: 15px; border-radius: 8px; font-weight: bold; text-align: center; box-shadow: 0 2px 6px rgba(0,0,0,0.2); }
 </style>
 </head>
 <body>
@@ -171,11 +171,21 @@ function atualizarTabela() {
     { titulo: 'Aéreos', valor: totalAereos, cor:'#9013fe' },
     { titulo: 'Aquáticos', valor: totalAquaticos, cor:'#b8e986' }
   ];
+
+  // Função para definir cor do texto conforme fundo
+  function corTexto(cor) {
+    const r = parseInt(cor.slice(1,3),16);
+    const g = parseInt(cor.slice(3,5),16);
+    const b = parseInt(cor.slice(5,7),16);
+    return (r*0.299 + g*0.587 + b*0.114) > 186 ? '#000' : '#fff';
+  }
+
   estatisticasDiv.innerHTML = '';
   cards.forEach(c => {
     const card = document.createElement('div');
     card.className = 'card';
     card.style.backgroundColor = c.cor;
+    card.style.color = corTexto(c.cor);
     card.innerHTML = `<div>${c.titulo}</div><div style="font-size:1.5em; margin-top:5px;">${c.valor}</div>`;
     estatisticasDiv.appendChild(card);
   });
