--- a/index-tabela.html
+++ b/index-tabela.html
@@ -30,7 +30,16 @@
 
   /* Cards de estatísticas */
   #estatisticas { display: flex; flex-wrap: wrap; gap: 15px; margin-bottom: 20px; }
-  .card { flex: 1 1 150px; padding: 15px; border-radius: 8px; font-weight: bold; text-align: center; box-shadow: 0 2px 6px rgba(0,0,0,0.2); }
+  .card {
+    flex: 1 1 150px;
+    padding: 15px;
+    border-radius: 8px;
+    font-weight: bold;
+    text-align: center;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    transition: transform 0.3s, background-color 0.3s;
+  }
+  .card.animar { transform: scale(1.05); }
 </style>
 </head>
 <body>
@@ -172,7 +181,6 @@ function atualizarTabela() {
     { titulo: 'Aquáticos', valor: totalAquaticos, cor:'#b8e986' }
   ];
 
-  // Função para definir cor do texto conforme fundo
   function corTexto(cor) {
     const r = parseInt(cor.slice(1,3),16);
     const g = parseInt(cor.slice(3,5),16);
@@ -188,6 +196,10 @@ function atualizarTabela() {
     card.style.color = corTexto(c.cor);
     card.innerHTML = `<div>${c.titulo}</div><div style="font-size:1.5em; margin-top:5px;">${c.valor}</div>`;
     estatisticasDiv.appendChild(card);
+
+    // Animação suave
+    setTimeout(() => card.classList.add('animar'), 50);
+    setTimeout(() => card.classList.remove('animar'), 350);
   });
 
   tabela.innerHTML = '';
